Set ResourceRequest::transition_type for navigation requests

ServiceWorker needs the information.

Bug: 845408
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_mojo
Change-Id: I138d02f7bf3cf69b1949be785fb0e57c596d8c06
Reviewed-on: https://chromium-review.googlesource.com/1077880
Reviewed-by: Kenichi Ishibashi <bashi@chromium.org>
Reviewed-by: Camille Lamy <clamy@chromium.org>
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Commit-Queue: Yutaka Hirano <yhirano@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563156}
Former-commit-id: 61e41b3cb2aeb6f9b98d86b47d12a214cfa572ce